k8s-manifests/order-deploymentNEW.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: acrmicroapp.azurecr.io/order-service:latest
        ports:
        - containerPort: 8081
