k8s-manifests/order-serviceNEW.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
